--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,8 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   background: var(--main-color);
+  margin: 0px;
+  padding: 0px;
 }
 
 h1 {
